# Avalon

./: .gitignore  README.md  pyproject.toml
avalon/: __init__.py  api.py  config.py  game.py  main.py  models.py  storage.py  tunnel.py
avalon/bot/: llm.py  manager.py  policy.py  prompts.py
avalon/web/: app.js  control.html  control.js  game.html  game.js  index.html  lobby.html  lobby.js  picker.js  player.html  player.js  player_picker.html  styles.css
